--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@babel/core": "^7.22.1",
     "@babel/preset-env": "^7.22.4",
     "@babel/register": "^7.21.0",
+    "@wdio/allure-reporter": "^8.10.7",
     "@wdio/cli": "^8.10.5",
     "@wdio/cucumber-framework": "^8.10.4",
     "@wdio/local-runner": "^8.10.5",
